# BSUIR_course-projects

./: .gitignore  readme.md
1 year - File manager/file-manager/: CMakeLists.txt  config.txt  explanatory-note.docx  main.cpp  readme.md  theme.txt
1 year - File manager/file-manager/GUI/: file_manager_GUI.cpp  file_manager_GUI.h
1 year - File manager/file-manager/GUI/EventsConroller/: events_controller.cpp  events_controller.h  file_manager_events_controller.cpp  file_manager_events_controller.h
1 year - File manager/file-manager/GUI/MainGUI/: main_GUI.cpp  main_GUI.h
1 year - File manager/file-manager/GUI/Modals/: modal-constants.h  modal_create.cpp  modal_create.h  modal_delete.cpp  modal_delete.h
1 year - File manager/file-manager/Launcher/: file_manager_launcher.cpp  file_manager_launcher.h  launcher.cpp  launcher.h
1 year - File manager/file-manager/MainClass/: file_manager.cpp  file_manager.h
1 year - File manager/file-manager/State/: file_manager_state.cpp  file_manager_state.h  state.cpp  state.h
1 year - File manager/file-manager/Utilities/: utilities.cpp  utilities.h
2 year - Movie Ticket Sales Service/server/: CMakeLists.txt  README.md  main.cpp  todo.md
2 year - Movie Ticket Sales Service/server/Core/: movie_ticket_sales_service.cpp  movie_ticket_sales_service.hpp  ticket_sales_service.cpp  ticket_sales_service.hpp
2 year - Movie Ticket Sales Service/server/Data/: test_movies.hpp
2 year - Movie Ticket Sales Service/server/Types/: movie.cpp  movie.hpp  range.hpp  serializable.hpp
2 year - Movie Ticket Sales Service/server/movies_service/: .coverage  README.md
2 year - Movie Ticket Sales Service/server/movies_service/movies/: .coverage
2 year - Movie Ticket Sales Service/server/movies_service/movies/marveldcmovies/: admin.py  apps.py  models.py  serializers.py  views.py
2 year - Movie Ticket Sales Service/server/movies_service/movies/marveldcmovies/migrations/: 0001_initial.py  0002_movie_visits_count.py  0003_movietheater.py  0004_rename_link_to_google_maps_location_movietheater_location_and_more.py  0005_movietheater_visits_count.py  (+10 more)
2 year - Movie Ticket Sales Service/server/movies_service/movies/movies/: settings.py  urls.py
FirstYear - File manager/file-manager/: CMakeLists.txt  FileManager.cpp  FileManager.h  FileManagerGUI.cpp  FileManagerGUI.h  FileManagerState.cpp  FileManagerState.h  Utility.cpp  Utility.h  config.txt  main.cpp  readme.md  theme.txt
FirstYear - File manager/file-manager/GUI/: file_manager_GUI.cpp  file_manager_GUI.h
FirstYear - File manager/file-manager/State/: file_manager_state.cpp
FirstYear - File manager/file-manager/Utilities/: utilities.cpp  utilities.h
(+191 files in other folders)
